# locus

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION.md  Dockerfile  LANGGRAPH_PARITY.md  LICENSE  LICENSE.txt  Makefile  README.md  SECURITY.md  THIRDPARTYREADME.txt  THIRD_PARTY_LICENSES.txt  config.example.yaml  dns-external-website-request-draft.md  dns-form-answers.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreate.sh  postStart.sh  welcome.md  workbench-attach.sh  workbench-banner.sh
.github/workflows/: _codespell.yml  _lint.yml  _precommit.yml  _release.yml  _test.yml  ci.yml  docs.yml  workbench.yml
deploy/locus-workbench/: Makefile  README.md
deploy/oci-functions/: app.py
docs/: CNAME  FEATURES.md  capabilities.md  index.md  legal.md  workbench.md
docs/api/: agent.md  checkpointers.md  deepagent.md  evaluation.md  events.md  hooks.md  models.md  multiagent.md  rag.md  reasoning.md  router.md  server.md  termination.md  tools.md
docs/concepts/: agent-loop.md  agent.md  checkpointers.md  conversation-management.md  deepagent.md  errors.md  evaluation.md  events.md  executors.md  graph-streaming.md  gsar.md  hooks.md  idempotency.md  interrupts.md  mcp.md  memory-manager.md  models.md  multi-agent.md  multi-modal-providers.md  observability.md  oci-responses.md  playbooks.md  prompts.md  rag.md  reasoning.md  retry.md  router.md  safety.md  server.md  skills.md  sse-events.md  state.md  streaming.md  structured-output.md  termination.md  tools.md
docs/how-to/: custom-checkpointer.md  custom-tools.md  deploy-workbench-free-tier.md  deploy.md  environment-variables.md  oci-dac.md  oci-models.md  persist-conversations.md  quickstart.md
docs/internal/: AGENTIC_LOOP_ROADMAP.md  FRAMEWORK_COMPARISON.md  ROADMAP_GAPS.md  THREAT_MODEL.md  security-architecture-review.md  security-remediation-summary.md  wiki-threat-remediation-section.md
docs/javascripts/: header-home.js
docs/notebooks/: index.md  notebook_01_oci_transports.md  notebook_02_oci_openai_chat.md  notebook_03_oci_responses.md  notebook_04_oci_dac.md  notebook_05_cohere_reranker.md  notebook_06_oracle_26ai_rag.md  notebook_07_oracle_26ai_checkpointer.md  notebook_08_oracle_adb_loader.md  notebook_09_oracle_indb_chunker.md  notebook_10_oracle_indb_embeddings.md  notebook_11_oracle_store.md  notebook_12_oracle_versioned_saver.md  notebook_13_basic_agent.md  notebook_14_agent_with_tools.md  notebook_15_agent_memory.md  notebook_16_agent_streaming.md  notebook_17_agent_hooks.md  notebook_18_sse_streaming.md  notebook_19_hooks_advanced.md  notebook_20_termination.md  notebook_21_basic_graph.md  notebook_22_conditional_routing.md  notebook_23_state_reducers.md  notebook_24_human_in_the_loop.md  notebook_25_advanced_patterns.md  notebook_26_composition.md  notebook_27_graph_advanced.md  notebook_28_functional_api.md  notebook_29_swarm_multiagent.md  notebook_30_agent_handoff.md  notebook_31_orchestrator_pattern.md  notebook_32_specialist_agents.md  notebook_33_a2a_protocol.md  notebook_34_deepagent.md  notebook_35_map_reduce_code_review.md  notebook_36_supervisor_critic_loop.md  notebook_37_debate_with_judge.md  notebook_38_multiagent_human_in_loop.md  notebook_39_emergent_routing.md  (+29 more)
docs/stylesheets/: locus.css
docs/tutorials/: index.md  tutorial_00_oci_transports.md  tutorial_01_basic_agent.md  tutorial_01_oci_transports.md  tutorial_02_agent_with_tools.md  tutorial_02_oci_openai_chat.md  tutorial_03_agent_memory.md  tutorial_03_oci_responses.md  tutorial_04_agent_streaming.md  tutorial_04_oci_dac.md  tutorial_05_agent_hooks.md  tutorial_05_cohere_reranker.md  tutorial_06_basic_graph.md  tutorial_06_oracle_26ai_rag.md  tutorial_07_conditional_routing.md  tutorial_07_oracle_26ai_checkpointer.md  tutorial_08_basic_agent.md  tutorial_08_state_reducers.md  tutorial_09_agent_with_tools.md  tutorial_09_human_in_the_loop.md  tutorial_10_advanced_patterns.md  tutorial_10_agent_memory.md  tutorial_11_agent_streaming.md  tutorial_11_swarm_multiagent.md  tutorial_12_agent_hooks.md  tutorial_12_mcp_integration.md  tutorial_13_sse_streaming.md  tutorial_13_structured_output.md  tutorial_14_hooks_advanced.md  tutorial_14_reasoning_patterns.md  tutorial_15_playbooks.md  tutorial_15_termination.md  tutorial_16_agent_handoff.md  tutorial_16_basic_graph.md  tutorial_17_conditional_routing.md  tutorial_17_orchestrator_pattern.md  tutorial_18_specialist_agents.md  tutorial_18_state_reducers.md  (+85 more)
examples/: .env.example  README.md  agent_gist.py  checkpointer_examples.py  coding_assistant.py  complex_agent.py  config.py  docker-compose.yaml  fastmcp_server.py  notebook_01_oci_transports.py  notebook_02_oci_openai_chat.py  notebook_03_oci_responses.py  notebook_04_oci_dac.py  notebook_05_cohere_reranker.py  notebook_06_oracle_26ai_rag.py  notebook_07_oracle_26ai_checkpointer.py  notebook_08_oracle_adb_loader.py  notebook_09_oracle_indb_chunker.py  notebook_10_oracle_indb_embeddings.py  notebook_11_oracle_store.py  notebook_12_oracle_versioned_saver.py  notebook_13_basic_agent.py  notebook_14_agent_with_tools.py  notebook_15_agent_memory.py  notebook_16_agent_streaming.py  notebook_17_agent_hooks.py  notebook_18_sse_streaming.py  notebook_19_hooks_advanced.py  notebook_20_termination.py  notebook_21_basic_graph.py  notebook_22_conditional_routing.py  notebook_23_state_reducers.py  notebook_24_human_in_the_loop.py  notebook_25_advanced_patterns.py  notebook_26_composition.py  notebook_27_graph_advanced.py  notebook_28_functional_api.py  notebook_29_swarm_multiagent.py  notebook_30_agent_handoff.py  notebook_31_orchestrator_pattern.py  (+161 more)
overrides/: main.html
sandbox/: .gitignore  Dockerfile  Makefile  README.md  SDK-ERGONOMICS.md
scripts/: coverage_baseline.json  coverage_ratchet.py  demo_locus_against_local_services.py  gen_notebook_pages.py  gen_tutorial_pages.py  run_notebooks.py  run_tutorials.py  start_local_test_services.sh
src/locus/: __init__.py  (+2 more)
tests/: __init__.py  _safe_math.py
workbench/: Dockerfile  Makefile  README.md  SDK-ERGONOMICS.md
(+633 files in other folders)
